; ModuleID = '/home/carl/AnghaBench/linux/drivers/vfio/platform/extr_vfio_platform_irq.c_vfio_platform_unmask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vfio/platform/extr_vfio_platform_irq.c_vfio_platform_unmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfio_platform_irq = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vfio_platform_irq*)* @vfio_platform_unmask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vfio_platform_unmask(%struct.vfio_platform_irq* %0) #0 {
  %2 = alloca %struct.vfio_platform_irq*, align 8
  %3 = alloca i64, align 8
  store %struct.vfio_platform_irq* %0, %struct.vfio_platform_irq** %2, align 8
  %4 = load %struct.vfio_platform_irq*, %struct.vfio_platform_irq** %2, align 8
  %5 = getelementptr inbounds %struct.vfio_platform_irq, %struct.vfio_platform_irq* %4, i32 0, i32 1
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.vfio_platform_irq*, %struct.vfio_platform_irq** %2, align 8
  %9 = getelementptr inbounds %struct.vfio_platform_irq, %struct.vfio_platform_irq* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load %struct.vfio_platform_irq*, %struct.vfio_platform_irq** %2, align 8
  %14 = getelementptr inbounds %struct.vfio_platform_irq, %struct.vfio_platform_irq* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @enable_irq(i32 %15)
  %17 = load %struct.vfio_platform_irq*, %struct.vfio_platform_irq** %2, align 8
  %18 = getelementptr inbounds %struct.vfio_platform_irq, %struct.vfio_platform_irq* %17, i32 0, i32 0
  store i32 0, i32* %18, align 4
  br label %19

19:                                               ; preds = %12, %1
  %20 = load %struct.vfio_platform_irq*, %struct.vfio_platform_irq** %2, align 8
  %21 = getelementptr inbounds %struct.vfio_platform_irq, %struct.vfio_platform_irq* %20, i32 0, i32 1
  %22 = load i64, i64* %3, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @enable_irq(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
